--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player:
+  video_player: ^2.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.5
   sleek_circular_slider: ^2.0.1
   http: ^0.13.4
   fluttertoast: ^8.0.9
@@ -33,6 +33,8 @@ dependencies:
   dropdown_button2: ^1.4.0
   bubble: ^1.2.1
   flutter_launcher_icons: ^0.9.3
+#  sms_otp_auto_verify: ^2.1.0
+#  sms_autofill: ^2.2.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -48,8 +50,7 @@ dev_dependencies:
     sdk: flutter
 
 
-
-#    image_form_field: ^0.1.0
+ #    image_form_field: ^0.1.0
  #video_player:
 
 
